# MyPhoto

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
specs/: TODO.md  idea.md
src/: App.vue  main.ts  vue-virtual-scroller.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: raf_decode_example.rs
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: exif_cmd.rs  filesystem.rs  mod.rs  thumbnail.rs  trash_cmd.rs
src-tauri/src/models/: directory.rs  exif.rs  image.rs  mod.rs
src-tauri/src/services/: directory_scanner.rs  exif_service.rs  image_cache.rs  image_processor.rs  mod.rs  thumbnail_service.rs
src-tauri/src/services/exif_service/: bmp.rs  common.rs  dng.rs  jpg.rs  mod.rs  raf.rs  read_exif_service.rs  tiff.rs  write_exif_service.rs  write_gps_service.rs  write_rating_service.rs
src-tauri/src/services/raw_decoders/: RAF_DECODER_README.md  bmp_decoder.rs  dng_decoder.rs  mod.rs  raf_decoder.rs  tiff_decoder.rs
src-tauri/tests/: raf_decoder_integration.rs
src/assets/styles/: global.css  variables.css
src/components/browser/: ImageBrowser.vue  ImageThumbnail.vue
src/components/common/: ConfirmDialog.vue  ContextMenu.vue  ExifDialog.vue  GPSDialog.vue  SplitPane.vue
src/components/directory/: DirectoryTree.vue  DirectoryTreeNode.vue
src/components/info/: ExifDisplay.vue  RatingControl.vue
src/components/layout/: CenterPanel.vue  LeftPanel.vue  (+2 more)
src/composables/: useContextMenu.ts  useTheme.ts
src/stores/: appState.ts
src/types/: directory.ts  exif.ts  image.ts
src/utils/: formatters.ts
(+9 files in other folders)
