[package]
name = "myphoto"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "myphoto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# EXIF read/write
kamadak-exif = "0.5"
little_exif = "0.5"

# Directory traversal
walkdir = "2"

# Recycle bin
trash = "5"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Encoding
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

